@@ -5,7 +5,7 @@ Description: Provides generators for a high number of both single- and multi-
     objective test functions which are frequently used for the benchmarking of
     (numerical) optimization algorithms. Moreover, it offers a set of convenient
     functions to generate, plot and work with objective functions.
-Version: 1.3
+Version: 1.4
 Date: 2016-02-23
 Authors@R: c(person("Jakob", "Bossek", email = "j.bossek@gmail.com", role =
     c("aut", "cre")), person("Pascal", "Kerschke", email = "kerschke@uni-muenster.de",
@@ -21,6 +21,7 @@ Imports:
     ggplot2,
     RColorBrewer,
     plot3D,
+    plotly,
     mco,
     Rcpp (>= 0.11.0)
 Suggests:
