@@ -217,6 +217,7 @@ import(RColorBrewer)
 import(checkmate)
 import(ggplot2)
 import(plot3D)
+import(plotly)
 importFrom(Rcpp,sourceCpp)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,abline)
@@ -226,5 +227,6 @@ importFrom(graphics,image)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(mco,nsga2)
+importFrom(stats,as.formula)
 importFrom(stats,reformulate)
 useDynLib(smoof)
