@@ -4,10 +4,11 @@
 #' @import ggplot2
 #' @import RColorBrewer
 #' @import plot3D
+#' @import plotly
 #' @useDynLib smoof
 #' @importFrom mco nsga2
 #' @importFrom Rcpp sourceCpp
 #' @importFrom grDevices colorRampPalette
 #' @importFrom graphics abline contour grid image plot points
-#' @importFrom stats reformulate
+#' @importFrom stats reformulate as.formula
 NULL
