@@ -12,6 +12,7 @@ smoof v1.4 (Release data: xxxx-xx-xx)
 * Added new multi-objective functions: Van Valedhuizen's test suite (MOP1-7), Binh-Korn function,
   BiSphere (bi-objective Sphere) and Dent function.
 * visualizeParetoOptimalFront now draws lines instead of points
+* Added possibility to draw interactive 3D surface plots via smoof::plot3D(fn, package = "plotly")
 
 smoof v1.3 (Release data: 2016-02-23)
 ============
